# via

./: .bashrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.org  TODO  TODOs.md  TODOs.org  TODOs.org_archive  adjust  archive.go  bitbucket-pipelines.yml  bootstrap  build-glibc  config-glibc  config.go  config.json  config.json.example  config_test.go  configure  configure.ac  contain.go  cross-bootstrap  dat.json  devel.go  docker.run  go.mod  go.sum  install.go  json.go  main.go  main_test.go  (+10 more)
con/: config.json  main.go
config/: via.site
contain/: main.go
cross/: core.list  tools.list
docker/: Dockerfile
docs/: DESIGN.markdown  TODO.markdown  TOODO.markdown
etc/: Makefile.am  config.site  via.conf.in
org/: Design.org  TODOs.org  TODOs.org_archive
pkg/: archive.go  archive_test.go  batch.go  batch_test.go  build.go  build_test.go  builder.pb.go  builder.pb_test.go  builder.proto  cache.go  cache_test.go  circuit.go  circuit_test.go  client.go  cmds.go  cmds_test.go  config.go  config_test.go  construct.go  construct_test.go  container.go  container_test.go  context.go  context_test.go  daemon.go  daemon_test.go  environ.go  environ_test.go  expand_test.go  git.go  git_test.go  install.go  install_test.go  ipfs.go  ipfs_api.go  ipfs_devel.go  ipfs_test.go  manifest.go  path.go  path_test.go  (+14 more)
plans/: bash.json  ncurses.json  pkg-config.json  plan.proto  which.json
plugins/: release.go  tobuild.go
src/: Makefile.am  Makefile.in  cross-bootstrap.in  via  via.in  (+1 more)
(+525 files in other folders)
