# Copyright (C) 2006 Free Software Foundation, Inc.
# This configure.ac script is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.

AC_INIT([via], [0.1], [mike.rossest@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
