#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([via], [0.1], [mike.rosset@gmail.com])
AM_INIT_AUTOMAKE
AC_SUBST([viaconfdir], ['${sysconfdir}/${PACKAGE}'])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_SED

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 etc/Makefile
                 src/Makefile])
AC_OUTPUT
